Fixed a bunch of CSS and layout bugs.

--- a/NumberSearch.Mvc/wwwroot/css/site.css
+++ b/NumberSearch.Mvc/wwwroot/css/site.css
@@ -17,6 +17,7 @@ body {
     padding-bottom: 1rem;
     border-bottom: .05rem solid #e5e5e5;
 }
+
     /* Make the masthead heading the same height as the navigation */
     .header h3 {
         margin-top: 0;
@@ -26,9 +27,7 @@ body {
 
 /* Custom page footer */
 .footer {
-    padding-top: 1.5rem;
     color: #777;
-    border-top: .05rem solid #e5e5e5;
 }
 
 .container-narrow > hr {
